...
    <string name="loading">Загрузка</string>
    <string name="no_data">Нет данных</string>
    <string name="cache_load_error">Ошибка загрузки кешированного списка</string>
    <string name="bbcodes_and_smiles">BB-коды и смайлы</string>
    <string name="bbcodes">BB-коды</string>
    <string name="spoiler_title">Название спойлера</string>
    <string name="cancel">Отмена</string>
    <string name="enter_full_address">Пожалуйста, введите полный URL адрес</string>
    <string name="enter_title">Пожалуйста, введите заголовок</string>
    <string name="visit_my_homepage">Посетить мою домашнюю страницу</string>
    <string name="enter_content_n_item">Введите содержание %d пункта списка</string>
    <string name="select_text_size">Выберите размер текста</string>
    <string name="select_list">Выберите список</string>
...
    <string name="write">Написать</string>
    <string name="setting">Настройка</string>
    <string name="no_selected_posts">Не выбрано ни одного сообщения</string>
    <string name="perform">Выполнить</string>
    <string name="catalog">Каталог</string>
    <string name="warning">Предупреждение</string>
    <string name="delete">Удалить</string>
    <string name="close">Закрыть</string>
    <string name="discussions">Обсуждения</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="text_not_empty">Имеется введенный текст сообщения! Закрыть?</string>
    <string name="is_sure">Уверены?</string>
    <string name="confirm_sending">Подтвердите отправку</string>
...
    <string name="request_performed">Запрос выполнен</string>
    <string name="note">Заметка</string>
    <string name="topic">Топик</string>
    <string name="user">Пользователь</string>
    <string name="notes">Заметки</string>
    <string name="ask_delete_note">Удалить заметку?</string>
    <string name="links">Ссылки</string>
    <string name="specifications">Характеристики</string>
    <string name="review">Обзор</string>
    <string name="prices">Цены</string>
    <string name="understand">Я прочитал</string>
    <string name="claim_title">Жалоба модератору на сообщение</string>
    <string name="send">Отправить</string>
...
    <string name="look">Посмотреть</string>
    <string name="reputation">Репутация</string>
    <string name="all_forums">Все форумы</string>
    <string name="total">Всего</string>
    <string name="qms_thread_total">всего: %d</string>
    <string name="source">Источник</string>
    <string name="link_to_post">Ссылка на сообщение</string>
    <string name="vote_request_sent">Запрос на изменение репутации сообщения отправлен</string>
    <string name="vote_error_already_voted">Ошибка изменения репутации: Вы уже голосовали за этот пост</string>
    <string name="vote_post_increased">Репутация поста повышена</string>
    <string name="vote_post_decreased">Репутация поста понижена</string>
    <string name="vote_change_error">Ошибка изменения репутации</string>
    <string name="change_reputation">Кому изменял репутацию</string>
...
