...
    </string>
    <string name="NeedToLogin">Необходимо авторизироваться!</string>
    <string name="AcceptStyle">Применить</string>
    <string name="ChooseStyle">Выберите стиль</string>
    <string name="Information">Информация</string>
...

    <!-- Тема (ошибочно переведена как "Theme" вместо "Topic") -->
    <string name="theme">Тема</string>
    <string name="entered_text">Имеется введенный текст сообщения! Закрыть тему?</string>
    <string name="apply_yes">Да</string>
...
    <string name="only_now">Только сейчас</string>
    <string name="hint">Подсказка</string>
    <string name="ok">OK</string>
    <string name="error">Ошибка</string>
    <string name="check_connection">Проверьте соединение</string>
...
    <string name="invalid_number_format">Неверный формат числа!</string>
    <string name="links_not_supported">Такие ссылки не поддерживаются</string>
    <string name="choose">Выберите</string>
    <string name="chare_via">Поделиться через…</string>
    <string name="link_copied_to_buffer">Ссылка скопирована</string>
...
    <string name="forum_rules">Правила форума</string>
    <string name="search_in_forum">Поиск по форуму</string>
    <string name="accept">Применить</string>
    <string name="forum_topics">Темы форума</string>
    <string name="full_size">Полная версия</string>
...
    <string name="save_page">Сохранить страницу</string>
    <string name="dev_mode">Режим разработчика</string>
    <string name="reset">Сброс</string>
    <string name="server_return_empty_page">Сервер вернул пустую страницу</string>
    <string name="site_response">"Ответ сайта 4pda: "</string>
...
    <string name="select_items">Выберите пункты</string>
    <string name="color">Цвет</string>
    <string name="pick_accent_color">Выберите цвет акцента</string>
    <string name="blue">Синий</string>
    <string name="pink">Розовый</string>
    <string name="gray">Серый</string>
    <string name="path_to_data">Путь к папке с данными</string>
    <string name="choose_font">Выберите шрифт</string>
    <string name="font_from_style">Шрифт из стиля</string>
    <string name="system_font">Системный шрифт</string>
    <string name="enter_font_name">Ввести имя шрифта</string>
    <string name="font_name">Имя шрифта</string>

    <string name="lang_pref_title">Язык</string>
...
    <string name="menu_topic_load_imgs_for_session">Загр-ть изобр-я (для сессии)</string>
    <string name="menu_topic_attachments_invert_sorting">Инвертировать сортировку</string>
    <string name="appearance">Внешний вид</string>
    <string name="overall">Общее</string>
    <string name="choose_the_theme">Выберите стиль программы</string>
    <string name="pick_side_color">Цвет кнопки в теме и новостях</string>
    <string name="pick_color_with_pencil">Цвет кнопки с карандашом</string>
    <string name="font_in_many">Шрифт в новостях, поиске, теме, профиле, QMS</string>
    <string name="webview_font">Шрифт WebView</string>
    <string name="requires_application_restart">Требуется перезапуск приложения</string>
    <string name="toolbar_text_scrolling">Прокрутка длинного текста в тулбаре</string>
    <string name="square_avatars">Квадратные аватарки</string>
    <string name="statusbar_fake_summary">Подходит для прошивок MIUI, Flyme и т.п на Android 4.4</string>
    <string name="statusbar_fake_title">Status Bar как в Android 5+</string>
    <string name="old_indicator_title">Полоса у новых сообщений</string>
    <string name="colored_nav_bar_summary">Для Android 5 и выше. Требуется перезапуск приложения</string>
    <string name="colored_nav_bar_title">Красить Navigation Bar</string>
    <string name="pencil_in_actionbar">Карандаш в экшнбаре</string>
    <string name="side_panel">Боковая панель</string>
    <string name="user_background_title">Изображение в боковом меню</string>
    <string name="visible_menu_items_title">Пункты меню в боковой панели</string>
    <string name="show_user_info_summary">Отображать информацию о пользователе в боковом меню. Требуется перезапуск приложения</string>
...
