<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<View
		android:id="@+id/preview"
		android:layout_width="0dp"
		android:layout_height="56dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		tools:background="#ff0000" />

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/preview"
		app:layout_constraintStart_toStartOf="parent"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/color_red" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/textView1"
		app:layout_constraintStart_toStartOf="parent"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/color_green" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@id/textView2"
		app:layout_constraintStart_toStartOf="parent"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/color_blue" />

	<androidx.constraintlayout.widget.Barrier
		android:id="@+id/leftBarrier"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:barrierDirection="end"
		app:constraint_referenced_ids="textView1, textView2, textView3" />

	<SeekBar
		android:id="@+id/red"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/textView1"
		app:layout_constraintBottom_toBottomOf="@id/textView1"
		app:layout_constraintStart_toStartOf="@id/leftBarrier"
		app:layout_constraintEnd_toStartOf="@id/redText"
		android:max="255" />

	<EditText
		android:id="@+id/redText"
		android:layout_width="48dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/red"
		app:layout_constraintBottom_toBottomOf="@id/red"
		app:layout_constraintEnd_toEndOf="parent"
		android:inputType="number"
		android:textSize="14sp"
		android:importantForAutofill="no"
		tools:ignore="LabelFor" />

	<SeekBar
		android:id="@+id/green"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/textView2"
		app:layout_constraintBottom_toBottomOf="@id/textView2"
		app:layout_constraintStart_toStartOf="@id/leftBarrier"
		app:layout_constraintEnd_toStartOf="@id/greenText"
		android:max="255" />

	<EditText
		android:id="@+id/greenText"
		android:layout_width="48dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/green"
		app:layout_constraintBottom_toBottomOf="@id/green"
		app:layout_constraintEnd_toEndOf="parent"
		android:inputType="number"
		android:textSize="14sp"
		android:importantForAutofill="no"
		tools:ignore="LabelFor" />

	<SeekBar
		android:id="@+id/blue"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/textView3"
		app:layout_constraintBottom_toBottomOf="@id/textView3"
		app:layout_constraintStart_toStartOf="@id/leftBarrier"
		app:layout_constraintEnd_toStartOf="@id/blueText"
		android:max="255" />

	<EditText
		android:id="@+id/blueText"
		android:layout_width="48dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="@id/blue"
		app:layout_constraintBottom_toBottomOf="@id/blue"
		app:layout_constraintEnd_toEndOf="parent"
		android:inputType="number"
		android:textSize="14sp"
		android:importantForAutofill="no"
		tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>